# lys

./: .awqignore  .env-example  .gitignore  Cargo.toml  README.md  _lys  deny.toml  lys.1  lys.fish  lys.yml  lysrc  lysrc.5  syl
hooks/c/: awq.json
hooks/cmake/: awq.json
hooks/cxx/: awq.json
hooks/d/: awq.json
hooks/go/: awq.json
hooks/js/: awq.json
hooks/php/: awq.json
hooks/python/: awq.json
hooks/ruby/: awq.json
hooks/rust/: awq.json
hooks/ts/: awq.json
locales/en-US/: messages.ftl
locales/fr_FR/: messages.ftl
migrations/: 20260714172652_create_views.sql  20260714174344_create_collaboration_and_config.sql
migrations/mariadb/: 20260704095413_initial_schema.sql
migrations/postgres/: 20260704095413_initial_schema.sql
migrations/sqlite/: 20260704095413_initial_schema.sql
shells/: _lys  awq.fish
src/: branch.rs  chat.rs  commit.rs  crypto.rs  db.rs  dbs.rs  email.rs  health.rs  import.rs  lysrc.rs  main.rs  shell.rs  tags.rs  todo.rs  tree.rs  utils.rs  vcs.rs  web.rs
src/vcs/: branch.rs  commit.rs  db.rs  hooks.rs  init.rs  keys.rs  mod.rs  sync.rs  todo.rs  tree.rs
