[package]
name = "lys"
version = "0.2.0"
edition = "2024"
description = "A modern vcs"
authors = ["Saigo Ekitae"]
repository = "https://github.com/hackia/lys/tree/main/lys"
license = "AGPL-3.0"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.0", features = ["fs"] }
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.55"
crossterm = "0.29.0"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
inquire = { version = "0.9.3", features = ["date", "editor", "console"] }
similar = "2.7.0"
sqlite = "0.37.0"
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
rand = { version = "0.10.0", features = ["sys_rng"] }
git2 = "0.20.4"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
content_inspector = "0.2.4"
shlex = "1.3.0"
anyhow = "1.0.100"
indicatif = "0.18.3"
tempfile = "3.16.0"
dashmap = "6.1.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
pulldown-cmark = "0.13.0"
rustyline = "17.0.2"
once_cell = "1.19.0"
breathes = "0.1.5"
qr2term = "0.3.3"
serde_yaml = "0.9.34"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
dotenv = "0.15.0"
tar = "0.4.45"
flate2 = "1.1.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["env", "mount", "net", "process", "pthread", "term", "time", "uio", "user"] }
