[package]
name = "awq"
version = "0.0.1"
edition = "2024"
description = "A modern vcs"
authors = ["Saigo Ekitae"]
repository = "https://github.com/kognitara/awq"
license = "AGPL-3.0"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["fs"] }
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.55"
crossterm = "0.29.0"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.27"
inquire = { version = "0.9.3", features = ["date", "editor", "console"] }
similar = "3.1.1"
sqlite = "0.37.0"
tabled = "0.21.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
git2 = { version = "0.21.0", features = ["https", "ssh", "vendored-openssl"] }
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
content_inspector = "0.2.4"
shlex = "2.0.1"
anyhow = "1.0.100"
indicatif = "0.18.6"
tempfile = "3.16.0"
dashmap = "6.1.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
pulldown-cmark = "0.13.0"
rustyline = "18.0.1"
once_cell = "1.19.0"
serde_yaml = "0.9.34"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
tar = "0.4.45"
flate2 = "1.1.9"
justify = { version = "0.1.3", features = ["unicode-width"] }
dotenvy = "0.15.7"
strip-ansi-escapes = "0.2.1"
devicons = "0.6.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = [
    "env",
    "mount",
    "net",
    "process",
    "pthread",
    "term",
    "time",
    "uio",
    "user",
] }
